Refactor VideoCreationCommand validation

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -57,4 +57,5 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 # Video creation command param errors
 videoCreationCommand.title.nullable=[title] is required
 videoCreationCommand.videoStream.nullable=[video] is required
-videoCreationCommand.streams.validator.invalid=[video] does not contain an h264 video and/or an aac audio streams
+videoCreationCommand.h264StreamIsPresent.h264IsMissing=[video] must contain an h264 video stream
+videoCreationCommand.aacStreamIsPresent.aacIsMissing=[video] must contain an aac audio stream
