Report error message when video exceeds max length

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -59,3 +59,4 @@ videoCreationCommand.title.nullable=[title] is required
 videoCreationCommand.videoStream.nullable=[video] is required
 videoCreationCommand.h264StreamIsPresent.h264IsMissing=[video] must contain an h264 video stream
 videoCreationCommand.aacStreamIsPresent.aacIsMissing=[video] must contain an aac audio stream
+videoCreationCommand.durationInSeconds.exceedsMaxDuration=[video] exceeds max length of 2 minutes
