Report invalid video stream size

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -60,3 +60,4 @@ videoCreationCommand.videoStream.nullable=[video] is required
 videoCreationCommand.h264StreamIsPresent.h264IsMissing=[video] must contain an h264 video stream
 videoCreationCommand.aacStreamIsPresent.aacIsMissing=[video] must contain an aac audio stream
 videoCreationCommand.durationInSeconds.exceedsMaxDuration=[video] exceeds max length of 2 minutes
+videoCreationCommand.videoStreamSizeIsValid.exceedsMaxSize=[video] exceeds max size
