Simplify message code names

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -57,7 +57,15 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 # Video creation command param errors
 videoCreationCommand.title.nullable=[title] is required
 videoCreationCommand.videoStream.nullable=[video] is required
-videoCreationCommand.h264StreamIsPresent.h264IsMissing=[video] must contain an h264 video stream
-videoCreationCommand.aacStreamIsPresent.aacIsMissing=[video] must contain an aac audio stream
-videoCreationCommand.durationInSeconds.exceedsMaxDuration=[video] exceeds max length of 2 minutes
-videoCreationCommand.videoStreamSizeIsValid.exceedsMaxSize=[video] exceeds max size
+
+videoCreationCommand.h264StreamIsPresent.missing=[video] must contain an h264 video stream
+videoCreationCommand.h264StreamIsPresent.invalid=Problem occurred while processing h264 video stream
+
+videoCreationCommand.aacStreamIsPresent.missing=[video] must contain an aac audio stream
+videoCreationCommand.aacStreamIsPresent.invalid=Problem occurred while processing aac audio stream
+
+videoCreationCommand.durationInSeconds.exceedsMax=[video] exceeds max length of 2 minutes
+videoCreationCommand.durationInSeconds.invalid=[video] duration is invalid
+
+videoCreationCommand.videoStreamSizeIsValid.exceedsMax=[video] exceeds max size
+videoCreationCommand.videoStreamSizeIsValid.invalid=[video] size is invalid
