Pull registration error messages from messages.properties

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -69,3 +69,7 @@ videoCreationCommand.durationInSeconds.invalid=[video] duration is invalid
 
 videoCreationCommand.videoStreamSizeIsValid.exceedsMax=[video] exceeds max size
 videoCreationCommand.videoStreamSizeIsValid.invalid=[video] size is invalid
+
+# Registration errors
+registration.internal.error=Unable to register. Please try again.
+registration.user.exists=Username [{0}] is not available
