Add error handling for incoming registration params

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -70,6 +70,18 @@ videoCreationCommand.durationInSeconds.invalid=[video] duration is invalid
 videoCreationCommand.videoStreamSizeIsValid.exceedsMax=[video] exceeds max size
 videoCreationCommand.videoStreamSizeIsValid.invalid=[video] size is invalid
 
-# Registration errors
+# General registration errors
 registration.internal.error=Unable to register. Please try again.
-registration.user.exists=Username [{0}] is not available
+
+# Registration command errors
+registrationCommand.username.blank=[username] cannot be blank
+registrationCommand.username.nullable=[username] is required
+registrationCommand.username.unavailable=[username] is not available
+
+
+registrationCommand.password.blank=[password] cannot be blank
+registrationCommand.password.nullable=[password] is required
+
+registrationCommand.client_name.blank=[client_name] cannot be blank
+registrationCommand.client_name.nullable=[client_name] is required
+
