Add username and password restrictions

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -76,10 +76,14 @@ registration.internal.error=Unable to register. Please try again.
 # Registration command errors
 registrationCommand.username.blank=[username] cannot be blank
 registrationCommand.username.nullable=[username] is required
+
 registrationCommand.username.unavailable=[username] is not available
+registrationCommand.username.matches.invalid=[username] must be 2-15 alphanumeric characters long
 
 registrationCommand.password.blank=[password] cannot be blank
 registrationCommand.password.nullable=[password] is required
+
+registrationCommand.password.minSize.notmet=[password] must be at least 6 characters long
 
 registrationCommand.client_name.blank=[client_name] cannot be blank
 registrationCommand.client_name.nullable=[client_name] is required
