Handle transcoder errors gracefully at controller level

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -54,6 +54,9 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 
+# General video creation errors
+videoCreation.transcoder.error=Unable to create video. Please try again.
+
 # Video creation command param errors
 videoCreationCommand.title.nullable=[title] is required
 videoCreationCommand.videoStream.nullable=[video] is required
