Add email param to registration

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -77,6 +77,11 @@ videoCreationCommand.videoStreamSizeIsValid.invalid=[video] size is invalid
 registration.internal.error=Unable to register. Please try again.
 
 # Registration command errors
+registrationCommand.email.blank=[email] cannot be blank
+registrationCommand.email.nullable=[email] is required
+
+registrationCommand.email.email.invalid=[email] is not a valid e-mail address
+
 registrationCommand.username.blank=[username] cannot be blank
 registrationCommand.username.nullable=[username] is required
 
