Add send verification email to service

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -73,6 +73,10 @@ videoCreationCommand.durationInSeconds.invalid=[video] duration is invalid
 videoCreationCommand.videoStreamSizeIsValid.exceedsMax=[video] exceeds max size
 videoCreationCommand.videoStreamSizeIsValid.invalid=[video] size is invalid
 
+# Registration email
+registration.email.subject=Please Verify Your ReelTime Account
+registration.email.message=Hello {0}, please enter the following code on your registered device: {1}
+
 # General registration errors
 registration.internal.error=Unable to register. Please try again.
 
