Hook up verify endpoint in controller

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -77,8 +77,11 @@ videoCreationCommand.videoStreamSizeIsValid.invalid=[video] size is invalid
 registration.email.subject=Please Verify Your ReelTime Account
 registration.email.message=Hello {0}, please enter the following code on your registered device: {1}
 
-# General registration errors
+# General registration and verification
 registration.internal.error=Unable to register. Please try again.
+
+registration.verification.code.required=[verification_code] is required
+registration.verification.code.error=[verification_code] is invalid
 
 # Registration command errors
 registrationCommand.email.blank=[email] cannot be blank
