Wrap and handle ffprobe exceptions

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -56,6 +56,7 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 
 # General video creation errors
 videoCreation.transcoder.error=Unable to create video. Please try again.
+videoCreation.probe.error=Unable to analyze video. Please try again.
 
 # Video creation command param errors
 videoCreationCommand.title.nullable=[title] is required
