--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -81,8 +81,8 @@ registration.email.message=Hello {0}, please enter the following code on your re
 # General registration and verification
 registration.internal.error=Unable to register. Please try again.
 
-registration.verification.code.required=[verification_code] is required
-registration.verification.code.error=[verification_code] is invalid
+registration.confirmation.code.required=[code] is required
+registration.confirmation.code.error=[code] is invalid
 
 # Registration command errors
 registrationCommand.email.blank=[email] cannot be blank
