Add reel error messages and more tests

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -104,3 +104,15 @@ registrationCommand.password.minSize.notmet=[password] must be at least 6 charac
 registrationCommand.client_name.blank=[client_name] cannot be blank
 registrationCommand.client_name.nullable=[client_name] is required
 
+# User related reel errors
+reel.username.required=[username] is required
+reel.unknown.username=Requested user was not found
+
+# Reel errors
+reel.id.required=[reelId] is required
+
+reel.name.required=[name] is required
+reel.invalid.name=Requested reel name is not allowed
+
+video.id.required=[videoId] is required
+video.unknown=Requested video was not found
