Add audience functional tests

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -116,3 +116,6 @@ reel.invalid.name=Requested reel name is not allowed
 
 video.id.required=[videoId] is required
 video.unknown=Requested video was not found
+
+# Audience errors
+audience.unauthorized=Unauthorized audience operation requested
