Add unauthorized reel message

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -110,6 +110,7 @@ reel.unknown.username=Requested user was not found
 
 # Reel errors
 reel.id.required=[reelId] is required
+reel.unauthorized=Unauthorized reel operation requested
 
 reel.name.required=[name] is required
 reel.invalid.name=Requested reel name is not allowed
