--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -84,25 +84,25 @@ registration.internal.error=Unable to register. Please try again.
 registration.confirmation.code.required=[code] is required
 registration.confirmation.code.error=[code] is invalid
 
-# Registration command errors
-registrationCommand.email.blank=[email] cannot be blank
-registrationCommand.email.nullable=[email] is required
+# Account registration command errors
+accountRegistrationCommand.email.blank=[email] cannot be blank
+accountRegistrationCommand.email.nullable=[email] is required
 
-registrationCommand.email.email.invalid=[email] is not a valid e-mail address
+accountRegistrationCommand.email.email.invalid=[email] is not a valid e-mail address
 
-registrationCommand.username.blank=[username] cannot be blank
-registrationCommand.username.nullable=[username] is required
+accountRegistrationCommand.username.blank=[username] cannot be blank
+accountRegistrationCommand.username.nullable=[username] is required
 
-registrationCommand.username.unavailable=[username] is not available
-registrationCommand.username.matches.invalid=[username] must be 2-15 alphanumeric characters long
+accountRegistrationCommand.username.unavailable=[username] is not available
+accountRegistrationCommand.username.matches.invalid=[username] must be 2-15 alphanumeric characters long
 
-registrationCommand.password.blank=[password] cannot be blank
-registrationCommand.password.nullable=[password] is required
+accountRegistrationCommand.password.blank=[password] cannot be blank
+accountRegistrationCommand.password.nullable=[password] is required
 
-registrationCommand.password.minSize.notmet=[password] must be at least 6 characters long
+accountRegistrationCommand.password.minSize.notmet=[password] must be at least 6 characters long
 
-registrationCommand.client_name.blank=[client_name] cannot be blank
-registrationCommand.client_name.nullable=[client_name] is required
+accountRegistrationCommand.client_name.blank=[client_name] cannot be blank
+accountRegistrationCommand.client_name.nullable=[client_name] is required
 
 # User related reel errors
 reel.username.required=[username] is required
