Add functional tests for new client registration

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -104,6 +104,18 @@ accountRegistrationCommand.password.minSize.notmet=[password] must be at least 6
 accountRegistrationCommand.client_name.blank=[client_name] cannot be blank
 accountRegistrationCommand.client_name.nullable=[client_name] is required
 
+# Client registration command errors
+clientRegistrationCommand.username.blank=[username] cannot be blank
+clientRegistrationCommand.username.nullable=[username] is required
+
+clientRegistrationCommand.username.unauthenticated=Invalid credentials
+
+clientRegistrationCommand.password.blank=[password] cannot be blank
+clientRegistrationCommand.password.nullable=[password] is required
+
+clientRegistrationCommand.client_name.blank=[client_name] cannot be blank
+clientRegistrationCommand.client_name.nullable=[client_name] is required
+
 # User related reel errors
 reel.username.required=[username] is required
 reel.unknown.username=Requested user was not found
