Add video to reel at upload time

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -59,7 +59,13 @@ videoCreation.transcoder.error=Unable to create video. Please try again.
 videoCreation.probe.error=Unable to analyze video. Please try again.
 
 # Video creation command param errors
+videoCreationCommand.title.blank=[title] cannot be null
 videoCreationCommand.title.nullable=[title] is required
+
+videoCreationCommand.reel.blank=[reel] cannot be null
+videoCreationCommand.reel.nullable=[reel] is required
+videoCreationCommand.reel.unknown=[reel] is unknown
+
 videoCreationCommand.videoStream.nullable=[video] is required
 
 videoCreationCommand.h264StreamIsPresent.missing=[video] must contain an h264 video stream
