Add UserFollowingController to follow and unfollow user

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -138,3 +138,8 @@ video.unknown=Requested video was not found
 
 # Audience errors
 audience.unauthorized=Unauthorized audience operation requested
+
+# User following errors
+following.username.required=[username] is required
+following.unknown.username=Requested user was not found
+following.invalid.request=Invalid following operation requested
