Add support for display names

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -107,6 +107,11 @@ accountRegistrationCommand.password.nullable=[password] is required
 
 accountRegistrationCommand.password.minSize.notmet=[password] must be at least 6 characters long
 
+accountRegistrationCommand.display_name.blank=[display_name] cannot be blank
+accountRegistrationCommand.display_name.nullable=[display_name] is required
+
+accountRegistrationCommand.display_name.matches.invalid=[display_name] must be 2-20 alphanumeric or space characters long
+
 accountRegistrationCommand.client_name.blank=[client_name] cannot be blank
 accountRegistrationCommand.client_name.nullable=[client_name] is required
 
