Add messages for SearchCommand

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -148,3 +148,14 @@ audience.unauthorized=Unauthorized audience operation requested
 following.username.required=[username] is required
 following.unknown.username=Requested user was not found
 following.invalid.request=Invalid following operation requested
+
+# Search command errors
+searchCommand.type.blank=[type] cannot be blank
+searchCommand.type.nullable=[type] is required
+searchCommand.type.not.inList=[type] is not supported
+
+searchCommand.query.blank=[query] cannot be blank
+searchCommand.query.nullable=[query] is required
+
+searchCommand.page.nullable=[page] is invalid
+searchCommand.page.min.notmet=[page] must be a positive number
