Add UserController for listing users

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -157,5 +157,6 @@ searchCommand.type.not.inList=[type] is not supported
 searchCommand.query.blank=[query] cannot be blank
 searchCommand.query.nullable=[query] is required
 
-searchCommand.page.nullable=[page] is invalid
-searchCommand.page.min.notmet=[page] must be a positive number
+# Paged list command errors
+pagedListCommand.page.nullable=[page] is invalid
+pagedListCommand.page.min.notmet=[page] must be a positive number
