Start on list users functional tests

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -158,5 +158,6 @@ searchCommand.query.blank=[query] cannot be blank
 searchCommand.query.nullable=[query] is required
 
 # Paged list command errors
-pagedListCommand.page.nullable=[page] is invalid
+pagedListCommand.page.nullable=[page] must be a positive number or be omitted
 pagedListCommand.page.min.notmet=[page] must be a positive number
+typeMismatch.in.reeltime.search.PagedListCommand.page=[page] is invalid
