Support changing password and display name and start on password reset

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -115,6 +115,9 @@ accountRegistrationCommand.display_name.matches.invalid=[display_name] must be 2
 accountRegistrationCommand.client_name.blank=[client_name] cannot be blank
 accountRegistrationCommand.client_name.nullable=[client_name] is required
 
+# Reset password email
+account.password.reset.email.subject=ReelTime Password Reset
+
 # Client registration command errors
 clientRegistrationCommand.username.blank=[username] cannot be blank
 clientRegistrationCommand.username.nullable=[username] is required
