Send reset password code and confirm it

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -117,6 +117,7 @@ accountRegistrationCommand.client_name.nullable=[client_name] is required
 
 # Reset password email
 account.password.reset.email.subject=ReelTime Password Reset
+account.password.reset.email.message=Hello {0}, please enter the following code when prompted to reset your password: {1}
 
 # Client registration command errors
 clientRegistrationCommand.username.blank=[username] cannot be blank
