Add error message for account management

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -119,6 +119,47 @@ accountRegistrationCommand.client_name.nullable=[client_name] is required
 account.password.reset.email.subject=ReelTime Password Reset
 account.password.reset.email.message=Hello {0}, please enter the following code when prompted to reset your password: {1}
 
+# Reset password command errors
+resetPasswordCommand.username.blank=[username] cannot be blank
+resetPasswordCommand.username.nullable=[username] is required
+
+resetPasswordCommand.new_password.blank=[new_password] cannot be blank
+resetPasswordCommand.new_password.nullable=[new_password] is required
+resetPasswordCommand.new_password.minSize.notmet=[new_password] must be at least 6 characters long
+
+resetPasswordCommand.code.blank=[code] cannot be blank
+resetPasswordCommand.code.nullable=[code] is required
+
+resetPasswordCommand.client_is_registered=[client_is_registered] is required
+
+resetPasswordCommand.client_id.blank=[client_id] cannot be blank
+resetPasswordCommand.client_id.nullable=[client_id] is required
+
+resetPasswordCommand.client_id.unauthenticated=Invalid credentials
+resetPasswordCommand.client_id.unauthorized=Forbidden request
+
+resetPasswordCommand.client_secret.blank=[client_secret] cannot be blank
+resetPasswordCommand.client_secret.nullable=[client_secret] is required
+
+resetPasswordCommand.client_secret.unauthenticated=Invalid credentials
+resetPasswordCommand.client_secret.unauthorized=Forbidden request
+
+resetPasswordCommand.client_name.blank=[client_name] cannot be blank
+resetPasswordCommand.client_name.nullable=[client_name] is required
+
+# Change password command errors
+changePasswordCommand.new_password.blank=[new_password] cannot be blank
+changePasswordCommand.new_password.nullable=[new_password] is required
+changePasswordCommand.new_password.minSize.notmet=[new_password] must be at least 6 characters long
+
+# Change display name command errors
+changeDisplayNameCommand.display_name.blank=[display_name] cannot be blank
+changeDisplayNameCommand.display_name.nullable=[display_name] is required
+changeDisplayNameCommand.display_name.matches.invalid=[display_name] must be 2-20 alphanumeric or space characters long
+
+# Revoke client errors
+account.revoke.client.id.required=[client_id] is required
+
 # Client registration command errors
 clientRegistrationCommand.username.blank=[username] cannot be blank
 clientRegistrationCommand.username.nullable=[username] is required
