--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -131,7 +131,7 @@ resetPasswordCommand.new_password.minSize.notmet=[new_password] must be at least
 resetPasswordCommand.code.blank=[code] cannot be blank
 resetPasswordCommand.code.nullable=[code] is required
 
-resetPasswordCommand.client_is_registered=[client_is_registered] is required
+resetPasswordCommand.client_is_registered.nullable=[client_is_registered] is required
 
 resetPasswordCommand.client_id.blank=[client_id] cannot be blank
 resetPasswordCommand.client_id.nullable=[client_id] is required
