Add functional tests for changing display name and password

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -151,9 +151,9 @@ changePasswordCommand.new_password.nullable=[new_password] is required
 changePasswordCommand.new_password.minSize.notmet=[new_password] must be at least 6 characters long
 
 # Change display name command errors
-changeDisplayNameCommand.display_name.blank=[display_name] cannot be blank
-changeDisplayNameCommand.display_name.nullable=[display_name] is required
-changeDisplayNameCommand.display_name.matches.invalid=[display_name] must be 2-20 alphanumeric or space characters long
+changeDisplayNameCommand.new_display_name.blank=[new_display_name] cannot be blank
+changeDisplayNameCommand.new_display_name.nullable=[new_display_name] is required
+changeDisplayNameCommand.new_display_name.matches.invalid=[new_display_name] must be 2-20 alphanumeric or space characters long
 
 # Revoke client errors
 account.revoke.client.id.required=[client_id] is required
