Support pagination for listing user followings

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -200,6 +200,14 @@ searchCommand.type.not.inList=[type] is not supported
 searchCommand.query.blank=[query] cannot be blank
 searchCommand.query.nullable=[query] is required
 
+# Username dependent paged list command errors
+usernamePagedListCommand.username.blank=[username] cannot be blank
+usernamePagedListCommand.username.nullable=[username] is required
+
+usernamePagedListCommand.page.nullable=[page] must be a positive number or be omitted
+usernamePagedListCommand.page.min.notmet=[page] must be a positive number
+typeMismatch.in.reeltime.search.UsernamePagedListCommand.page=[page] is invalid
+
 # Paged list command errors
 pagedListCommand.page.nullable=[page] must be a positive number or be omitted
 pagedListCommand.page.min.notmet=[page] must be a positive number
