--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -184,6 +184,15 @@ reel.invalid.name=Requested reel name is not allowed
 video.id.required=[videoId] is required
 video.unknown=Requested video was not found
 
+reelCommand.reelId.nullable=[reelId] is required
+typeMismatch.in.reeltime.reel.ReelCommand.reelId=[reelId] is invalid
+
+reelVideoCommand.reelId.nullable=[reelId] is required
+typeMismatch.in.reeltime.reel.ReelVideoCommand.reelId=[reelId] is invalid
+
+reelVideoCommand.videoId.nullable=[videoId] is required
+typeMismatch.in.reeltime.reel.ReelVideoCommand.videoId=[videoId] is invalid
+
 # Audience errors
 audience.unauthorized=Unauthorized audience operation requested
 
