Use multiple command objects for username based lists

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -197,9 +197,12 @@ typeMismatch.in.reeltime.reel.ReelVideoCommand.videoId=[videoId] is invalid
 audience.unauthorized=Unauthorized audience operation requested
 
 # User following errors
-following.username.required=[username] is required
 following.unknown.username=Requested user was not found
 following.invalid.request=Invalid following operation requested
+
+# Username command errors
+usernameCommand.username.blank=[username] cannot be blank
+usernameCommand.username.nullable=[username] is required
 
 # Search command errors
 searchCommand.type.blank=[type] cannot be blank
@@ -209,13 +212,6 @@ searchCommand.type.not.inList=[type] is not supported
 searchCommand.query.blank=[query] cannot be blank
 searchCommand.query.nullable=[query] is required
 
-# Username dependent paged list command errors
-usernamePagedListCommand.username.blank=[username] cannot be blank
-usernamePagedListCommand.username.nullable=[username] is required
-
-usernamePagedListCommand.page.nullable=[page] must be a positive number or be omitted
-usernamePagedListCommand.page.min.notmet=[page] must be a positive number
-typeMismatch.in.reeltime.search.UsernamePagedListCommand.page=[page] is invalid
 
 # Paged list command errors
 pagedListCommand.page.nullable=[page] must be a positive number or be omitted
