Split VideoCommand out from ReelVideoCommand

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -187,11 +187,8 @@ video.unknown=Requested video was not found
 reelCommand.reelId.nullable=[reelId] is required
 typeMismatch.in.reeltime.reel.ReelCommand.reelId=[reelId] is invalid
 
-reelVideoCommand.reelId.nullable=[reelId] is required
-typeMismatch.in.reeltime.reel.ReelVideoCommand.reelId=[reelId] is invalid
-
-reelVideoCommand.videoId.nullable=[videoId] is required
-typeMismatch.in.reeltime.reel.ReelVideoCommand.videoId=[videoId] is invalid
+videoCommand.videoId.nullable=[videoId] is required
+typeMismatch.in.reeltime.video.VideoCommand.videoId=[videoId] is invalid
 
 # Audience errors
 audience.unauthorized=Unauthorized audience operation requested
