Use command object for adding reel and sending reset password email

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -184,6 +184,12 @@ reel.invalid.name=Requested reel name is not allowed
 video.id.required=[videoId] is required
 video.unknown=Requested video was not found
 
+addReelCommand.name.nullable=[name] is required
+addReelCommand.name.blank=[name] cannot be blank
+
+addReelCommand.name.minSize.notmet=[name] must be at least 5 characters long
+addReelCommand.name.maxSize.exceeded=[name] must be no more than 25 characters long
+
 reelCommand.reelId.nullable=[reelId] is required
 typeMismatch.in.reeltime.reel.ReelCommand.reelId=[reelId] is invalid
 
