Use command object for client revocation

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -156,7 +156,8 @@ changeDisplayNameCommand.new_display_name.nullable=[new_display_name] is require
 changeDisplayNameCommand.new_display_name.matches.invalid=[new_display_name] must be 2-20 alphanumeric or space characters long
 
 # Revoke client errors
-account.revoke.client.id.required=[client_id] is required
+revokeClientCommand.client_id.blank=[client_id] cannot be blank
+revokeClientCommand.client_id.nullable=[client_id] is required
 
 # Client registration command errors
 clientRegistrationCommand.username.blank=[username] cannot be blank
