Use command for account confirmation and return 403 for invalid code

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -87,8 +87,8 @@ registration.email.message=Hello {0}, please enter the following code on your re
 # General registration and verification
 registration.internal.error=Unable to register. Please try again.
 
-registration.confirmation.code.required=[code] is required
-registration.confirmation.code.error=[code] is invalid
+accountConfirmationCommand.code.blank=[code] cannot be blank
+accountConfirmationCommand.code.nullable=[code] is required
 
 # Account registration command errors
 accountRegistrationCommand.email.blank=[email] cannot be blank
