Finish refactoring exception handling

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -171,17 +171,9 @@ clientRegistrationCommand.password.nullable=[password] is required
 clientRegistrationCommand.client_name.blank=[client_name] cannot be blank
 clientRegistrationCommand.client_name.nullable=[client_name] is required
 
-# User related reel errors
-reel.username.required=[username] is required
-reel.unknown.username=Requested user was not found
-
-# Reel errors
-reel.id.required=[reelId] is required
-
-reel.name.required=[name] is required
-reel.invalid.name=Requested reel name is not allowed
-
-video.id.required=[videoId] is required
+# Resource not found errors
+reel.unknown=Requested reel was not found
+user.unknown=Requested user was not found
 video.unknown=Requested video was not found
 
 addReelCommand.name.nullable=[name] is required
@@ -190,6 +182,8 @@ addReelCommand.name.blank=[name] cannot be blank
 addReelCommand.name.minSize.notmet=[name] must be at least 5 characters long
 addReelCommand.name.maxSize.exceeded=[name] must be no more than 25 characters long
 
+addReel.name.invalid=Requested reel name is not allowed
+
 reelCommand.reelId.nullable=[reelId] is required
 typeMismatch.in.reeltime.reel.ReelCommand.reelId=[reelId] is invalid
 
@@ -197,7 +191,6 @@ videoCommand.videoId.nullable=[videoId] is required
 typeMismatch.in.reeltime.video.VideoCommand.videoId=[videoId] is invalid
 
 # User following errors
-following.unknown.username=Requested user was not found
 following.invalid.request=Invalid following operation requested
 
 # Username command errors
@@ -211,7 +204,6 @@ searchCommand.type.not.inList=[type] is not supported
 
 searchCommand.query.blank=[query] cannot be blank
 searchCommand.query.nullable=[query] is required
-
 
 # Paged list command errors
 pagedListCommand.page.nullable=[page] must be a positive number or be omitted
