Clean up comments in messages.properties

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -54,11 +54,10 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 
-# General video creation errors
+# Video creation errors
 videoCreation.transcoder.error=Unable to create video. Please try again.
 videoCreation.probe.error=Unable to analyze video. Please try again.
 
-# Video creation command param errors
 videoCreationCommand.title.blank=[title] cannot be null
 videoCreationCommand.title.nullable=[title] is required
 
@@ -84,13 +83,14 @@ videoCreationCommand.videoStreamSizeIsValid.invalid=[video] size is invalid
 registration.email.subject=Please Verify Your ReelTime Account
 registration.email.message=Hello {0}, please enter the following code on your registered device: {1}
 
-# General registration and verification
+# General registration and confirmation errors
 registration.internal.error=Unable to register. Please try again.
 
+# Account confirmation errors
 accountConfirmationCommand.code.blank=[code] cannot be blank
 accountConfirmationCommand.code.nullable=[code] is required
 
-# Account registration command errors
+# Account registration errors
 accountRegistrationCommand.email.blank=[email] cannot be blank
 accountRegistrationCommand.email.nullable=[email] is required
 
@@ -120,7 +120,7 @@ account.password.reset.email.subject=ReelTime Password Reset
 account.password.reset.email.message=Hello {0}, please enter the following code when prompted to reset your password: {1}
 account.reset.password.email.username.required=[username] is required
 
-# Reset password command errors
+# Reset password errors
 resetPasswordCommand.username.blank=[username] cannot be blank
 resetPasswordCommand.username.nullable=[username] is required
 
@@ -145,12 +145,12 @@ resetPasswordCommand.client_secret.nullable=[client_secret] is required
 resetPasswordCommand.client_name.blank=[client_name] cannot be blank
 resetPasswordCommand.client_name.nullable=[client_name] is required
 
-# Change password command errors
+# Change password errors
 changePasswordCommand.new_password.blank=[new_password] cannot be blank
 changePasswordCommand.new_password.nullable=[new_password] is required
 changePasswordCommand.new_password.minSize.notmet=[new_password] must be at least 6 characters long
 
-# Change display name command errors
+# Change display name errors
 changeDisplayNameCommand.new_display_name.blank=[new_display_name] cannot be blank
 changeDisplayNameCommand.new_display_name.nullable=[new_display_name] is required
 changeDisplayNameCommand.new_display_name.matches.invalid=[new_display_name] must be 2-20 alphanumeric or space characters long
@@ -159,7 +159,7 @@ changeDisplayNameCommand.new_display_name.matches.invalid=[new_display_name] mus
 revokeClientCommand.client_id.blank=[client_id] cannot be blank
 revokeClientCommand.client_id.nullable=[client_id] is required
 
-# Client registration command errors
+# Client registration errors
 clientRegistrationCommand.username.blank=[username] cannot be blank
 clientRegistrationCommand.username.nullable=[username] is required
 
@@ -176,6 +176,7 @@ reel.unknown=Requested reel was not found
 user.unknown=Requested user was not found
 video.unknown=Requested video was not found
 
+# Add reel errors
 addReelCommand.name.nullable=[name] is required
 addReelCommand.name.blank=[name] cannot be blank
 
@@ -184,20 +185,22 @@ addReelCommand.name.maxSize.exceeded=[name] must be no more than 25 characters l
 
 addReel.name.invalid=Requested reel name is not allowed
 
+# Reel errors
 reelCommand.reelId.nullable=[reelId] is required
 typeMismatch.in.reeltime.reel.ReelCommand.reelId=[reelId] is invalid
 
+# Video errors
 videoCommand.videoId.nullable=[videoId] is required
 typeMismatch.in.reeltime.video.VideoCommand.videoId=[videoId] is invalid
 
 # User following errors
 following.invalid.request=Invalid following operation requested
 
-# Username command errors
+# Username errors
 usernameCommand.username.blank=[username] cannot be blank
 usernameCommand.username.nullable=[username] is required
 
-# Search command errors
+# Search errors
 searchCommand.type.blank=[type] cannot be blank
 searchCommand.type.nullable=[type] is required
 searchCommand.type.not.inList=[type] is not supported
@@ -205,7 +208,7 @@ searchCommand.type.not.inList=[type] is not supported
 searchCommand.query.blank=[query] cannot be blank
 searchCommand.query.nullable=[query] is required
 
-# Paged list command errors
+# Paged list errors
 pagedListCommand.page.nullable=[page] must be a positive number or be omitted
 pagedListCommand.page.min.notmet=[page] must be a positive number
 typeMismatch.in.reeltime.search.PagedListCommand.page=[page] is invalid
